# DataHack-Odiasay-Solar-Energy-Forecast

./: .gitignore  README.md  Solar Energy Forecasting - Demo .ipynb  main.py  notes.ipynb  pyproject.toml
output/: complete_data.csv
solar_energy_forecast/: preprocess.py
